# quasar

./: .gitignore  pyproject.toml
quasar/: parser.py  pratt.py  quasar.py  token_defs.py
tests/: bracket.py  class_.py  test1.py  test2.py  test_attr.py  test_class.py  test_except.py  test_exception.py  test_tuples.py  test_unpack.py
