[tool.poetry]
name = "quasar"
version = "0.1.0"
description = ""
authors = ["Justin Van Winkle <justin.vanwinkle@google.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pratt = "^0.1.1"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
