[tool.poetry]
name = "quasar"
version = "0.1.0"
description = ""
authors = ["Justin Van Winkle <justin.vanwinkle@google.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
ipdb = "^0.13.3"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
